--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -372,14 +372,14 @@
        "dict_values(['Solta', 'Croatia', 1700, 59])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cities[0].values()\n",
-    "cities[0].values"
+    "cities[0].values()"
    ]
   },
   {
@@ -399,7 +399,8 @@
     }
    ],
    "source": [
-    "list(cities[0].values())"
+    "list(cities[0].values())\n",
+    "list(cities)"
    ]
   },
   {
