automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -393,14 +393,14 @@
        "['Solta', 'Croatia', 1700, 59]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(cities[0].values())\n",
-    "list(cities)"
+    "list(cities[0].values())"
    ]
   },
   {
