--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,8 @@
     }
    ],
    "source": [
-    "list(cities[0].keys())"
+    "list(cities[0].keys())\n",
+    "list(cities[0])"
    ]
   },
   {
