automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -338,14 +338,14 @@
        "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(cities[0].keys())\n",
-    "list(cities[0])"
+    "list(cities[0].keys())"
    ]
   },
   {
